# strawberry

./: .gitmodules  Cargo.toml  LICENSE  README.md
demo/: Cargo.toml
demo/src/: main.rs
drc/: Cargo.toml
drc-vnc/: Cargo.toml
drc-vnc/src/: main.rs
drc/src/: input.rs  lib.rs
drc/src/cmd/: data.rs  generic.rs  mod.rs
drc/src/input/: data.rs
drc/src/video/: data.rs  encoder.rs  frame.rs  mod.rs  tsf.rs
libdrc/: Cargo.toml  build.rs
libdrc/src/: main.rs  wrapper.h
strawberry/: Cargo.toml
strawberry/src/: lib.rs
strawberry/src/cmd/: data.rs
strawberry/src/input/: data.rs
strawberry/src/video/: encoder.rs  frame.rs  mod.rs  tsf.rs
