[package]
name = "drc-vnc"
version = "0.1.0"
edition = "2024"

[dependencies]
strawberry = { version = "0.1.0", path = "../strawberry" }
image = "0.25.9"
snafu = "0.8.9"
tokio = { version = "1.48.0", features = ["full"] }
vnc-rs = "0.5.2"
strawberry-x264 = { version = "0.1.0", path = "../strawberry-x264" }
yuv = "0.8.9"
