[package]
name = "drc"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
bitfld = "0.1.7"
snafu = "0.8.9"
tokio = { version = "1.48.0", features = ["full", "rt", "sync"] }
tokio-util = "0.7.17"
x264 = { version = "0.5.0", path = "../x264" }
x264-sys = "0.2.2"
zerocopy = "0.8.31"
zerocopy-derive = "0.8.31"
