[package]
name = "strawberry"
description = "Sending video to a Wii U gamepad, made rusty"
repository = "https://github.com/ActuallyRuben/strawberry.git"
documentation = "https://docs.rs/strawberry"
readme = "../README.md"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ActuallyRuben <ruben@actuallyruben.nl>"]

[dependencies]
bitflags = "2.10.0"
bitfld = "0.1.7"
snafu = "0.8.9"
tokio = { version = "1.48.0", features = ["full", "rt", "sync"] }
strawberry-x264 = { version = "0.1.0", path = "../strawberry-x264" }
x264-sys = "0.2.2"
zerocopy = { version = "0.8.31", features = ["derive"] }
pnet = "0.35.0"
